# stealth-dos-simulator

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
ml_pipeline/: main.py  pyproject.toml
target_env/: docker-compose.yaml  main.py  pyproject.toml
target_env/backend/: Dockerfile  app.py
target_env/nginx/: nginx.conf
traffic/attackers/RUDY/: pyproject.toml
traffic/attackers/shrew/: pyproject.toml
traffic/attackers/slowhttptest/: Dockerfile
traffic/attackers/slowloris/: pyproject.toml
traffic/attackers/slowloris-attack/: Dockerfile  pyproject.toml
traffic/background/: Dockerfile  pyproject.toml
traffic/manager/: Dockerfile  pyproject.toml
