[project]
name = "stealth-dos-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "target_env",
    "ml_pipeline",
    "traffic/background",
    "traffic/manager",
    "traffic/attackers/RUDY",
    "traffic/attackers/slowloris",
    "traffic/attackers/shrew",
]
